<resources>
    <string name="app_name">PersistentStorage</string>
    <string name="hint_id">User ID</string>
    <string name="search_id">Search user by ID</string>
    <string name="add_user">Add a new user</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="title">User data</string>
    <string name="no_id">You must enter a valid user ID</string>
    <string name="address_two_lines">%1s %2s\n%3s %4s</string>
    <string name="no_result">It was not possible to complete the requested operation.</string>
    <string name="unexpected">An unexpected problme occurred.</string>
    <string name="settings">Settings</string>
    <string name="display_all">Display all the user\'s data</string>
    <string name="title_new_user">New user</string>
    <string name="cancel">Cancel</string>
    <string name="create_user">Create</string>
    <string name="street">Street</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="empty_name">You must provide, at least, the user\'s name.</string>
    <string name="suite">Suite</string>
</resources>