<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/userFragment">

    <fragment
        android:id="@+id/userFragment"
        android:name="upv.dadm.persistentstorage.ui.fragments.UserFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_user">
        <action
            android:id="@+id/navigateToSettingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/navigateToAddUserBottomSheet"
            app:destination="@id/addUserBottomSheet" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="upv.dadm.persistentstorage.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <dialog
        android:id="@+id/addUserBottomSheet"
        android:name="upv.dadm.persistentstorage.ui.fragments.AddUserBottomSheet"
        android:label="@string/add_user"
        tools:layout="@layout/fragment_add_user"/>
</navigation>